# POST-Implementation

./: Cargo.toml  README.md
src/: ICarier.rs  ICarrier.rs  ISendable.rs  connector.rs  dns_client.rs  http_listener.rs  iCarrier.rs  iReceivable.rs  iSendable.rs  listener.rs  local.rs  main.rs  message.rs  message_handler.rs  message_type.rs  parial_msg.rs  remote.rs  server.rs  test.rs  test2.rs  transient.rs  type_info.rs
