[package]
name = "postImpl"
version = "0.1.0"
authors = ["y2k"]

[dependencies]
hyper="0.10.*"
iron="*"
router="*"
serde="*"
serde_json="*"
serde_derive="*"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "connector"
path = "src/connector.rs"

[[bin]]
name = "dns_client"
path = "src/dns_client.rs"
